--- a/home.html
+++ b/home.html
@@ -1,98 +1,73 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Coldi CRM — Главная</title>
+  <title>Dashboard — Coldi CRM</title>
   <link rel="stylesheet" href="css/style.css" />
-  <link rel="icon" href="img/logo.svg" type="image/svg+xml" />
-  <script src="https://unpkg.com/lucide@latest"></script>
 </head>
 <body>
-  <div class="sidebar" id="sidebar">
-    <div class="logo">
-      <img src="img/logo.svg" alt="Logo" />
-      Coldi
-    </div>
-    <div class="menu">
-      <a href="home.html" class="active"><i class="lucide lucide-home"></i> Главная</a>
-      <a href="leads.html"><i class="lucide lucide-users"></i> Лиды</a>
-      <a href="notifications.html"><i class="lucide lucide-bell"></i> Напоминания</a>
-      <a href="admin.html" id="adminPanelLink"><i class="lucide lucide-settings"></i> Админ</a>
-      <a href="#" onclick="logout()" class="logout-link">🚪 Выход</a>
-    </div>
-  </div>
+  <div class="dashboard">
+    <aside class="sidebar">
+      <div class="sidebar-header">
+        <h2>Coldi CRM</h2>
+        <p id="userRole"></p>
+      </div>
+      <ul class="nav-links">
+        <li><a href="home.html" class="active">Dashboard</a></li>
+        <li><a href="leads.html">Leads</a></li>
+        <li id="adminLink" style="display:none;"><a href="admin.html">Admin Panel</a></li>
+      </ul>
+    </aside>
 
-  <div class="topbar">
-    <button id="toggleSidebar" class="menu-toggle"><i class="lucide lucide-menu"></i></button>
-    <div class="topbar-right">
-      <div id="notificationBell" class="bell">
-        <i class="lucide lucide-bell"></i>
-        <div class="notification-popup" id="notificationPopup">
-          <p class="empty">Пока здесь пусто...</p>
+    <main class="main-content">
+      <div class="header">
+        <h1>Dashboard</h1>
+        <button class="logout-btn" onclick="logout()">Logout</button>
+      </div>
+
+      <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin-bottom: 30px;">
+        <div style="background: white; padding: 20px; border-radius: 10px; text-align: center; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">
+          <h3 style="font-size: 24px; color: var(--primary);">24</h3>
+          <p>New Leads</p>
+        </div>
+        <div style="background: white; padding: 20px; border-radius: 10px; text-align: center; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">
+          <h3 style="font-size: 24px; color: var(--success);">12</h3>
+          <p>Closed Deals</p>
         </div>
       </div>
-    </div>
+
+      <h2>Recent Leads</h2>
+      <div class="table-container">
+        <table>
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th>Status</th>
+              <th>Manager</th>
+            </tr>
+          </thead>
+          <tbody id="recentLeads">
+          </tbody>
+        </table>
+      </div>
+    </main>
   </div>
 
-  <div class="content">
-    <div class="welcome-box">
-      <h1 id="welcomeText">Добро пожаловать в Coldi CRM</h1>
-      <p id="mottoText">Пусть день будет продуктивным!</p>
-    </div>
-  </div>
-
+  <script src="js/data.js"></script>
+  <script src="js/main.js"></script>
   <script>
-    // Проверка роли
-    const role = localStorage.getItem("role");
-    if (!role) {
-      window.location.href = "index.html";
-    }
-
-    // Панель админа
-    const adminPanel = document.getElementById("adminPanelLink");
-    if (role !== "admin") {
-      adminPanel.style.display = "none";
-    }
-
-    // Приветствие + мотивация
-    const phrases = [
-      "Каждый звонок — шаг к успеху!",
-      "Улыбка слышна даже по телефону.",
-      "CRM — ваш ключ к победе!",
-      "Будь на шаг впереди конкурентов.",
-      "Сегодня — лучший день для новых достижений.",
-      "Хорошее начало — полдела.",
-      "Продажи начинаются с веры в себя."
-    ];
-    const greeting = document.getElementById("welcomeText");
-    const motto = document.getElementById("mottoText");
-
-    greeting.textContent = "Добро пожаловать в Coldi CRM";
-    motto.textContent = phrases[Math.floor(Math.random() * phrases.length)];
-
-    // Скрытие/открытие боковой панели
-    document.getElementById("toggleSidebar").onclick = () => {
-      document.getElementById("sidebar").classList.toggle("collapsed");
-    };
-
-    // Logout
-    function logout() {
-      localStorage.removeItem("role");
-      window.location.href = "index.html";
-    }
-
-    lucide.createIcons();
+    document.addEventListener('DOMContentLoaded', function () {
+      const clients = getClients().slice(-5);
+      const tbody = document.getElementById('recentLeads');
+      tbody.innerHTML = clients.map(c => `
+        <tr>
+          <td><a href="client-card.html?id=${c.id}" style="color:var(--primary);">${c.name}</a></td>
+          <td><span class="status ${c.status || 'new'}">${c.status || 'New'}</span></td>
+          <td>${c.manager || '—'}</td>
+        </tr>
+      `).join('');
+    });
   </script>
-<!-- Уведомления -->
-<div id="notificationIcon" class="notification-icon">
-  <img src="img/bell.svg" alt="🔔" />
-  <div id="notificationBadge" class="notification-badge" style="display: none;">0</div>
-</div>
-
-<div id="notificationPopup" class="notification-popup" style="display: none;"></div>
-
-<script src="js/reminder.js"></script>
-
 </body>
 </html>
